# PinCopy

./: README.md  package-lock.json  package.json
.github/workflows/: build-macos.yml
docs/: 系统介绍.md
releases/: README.md
scripts/: build-macos.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  pin-capability.json
src-tauri/permissions/: theme.toml
src-tauri/src/: hotkey.rs  lib.rs  main.rs  theme.rs
src/components/: PinWindow.tsx
src/hooks/: useTheme.ts
src/utils/: codeDetect.ts  formatJson.ts  highlight.ts  pinContent.ts  theme.ts
